# Harold-s-Firework-Machine

./: CMakeLists.txt  CSE335Final.anim  CanadianExperienceApp.cpp  CanadianExperienceApp.h  README.md  main.cpp
CanadianExperienceLib/: CMakeLists.txt  KatanaDrawable.cpp  KatanaDrawable.h  MachineAdapter.cpp  MachineAdapter.h  PictureFactory.cpp  SpartyFactory.cpp
MachineDemo/: CMakeLists.txt  MachineSystemIsolator.h  main.cpp
MachineLib/: CMakeLists.txt  Consts.h  Flag.cpp  Flag.h  IMachineSystem.h  Machine.cpp  Machine.h  MachineDialog.cpp  MachineDialog.h  MachineFactory1.cpp  MachineFactory1.h  MachineFactory2.cpp  MachineFactory2.h  MachinePart.cpp  MachinePart.h  MachineStandin.cpp  MachineStandin.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemFactory.h  MachineSystemStandin.cpp  MachineSystemStandin.h  Motor.cpp  Motor.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  Rocket.cpp  Rocket.h  RocketLauncher.cpp  RocketLauncher.h  RotationSink.h  RotationSource.h  Shape.cpp  Shape.h  pch.h
MachineTests/: MachineTest.cpp
Tests/: ActorTest.cpp  AnimChannelAngleTest.cpp  CMakeLists.txt  DrawableTest.cpp  ImageDrawableTest.cpp  PictureObserverTest.cpp  PictureTest.cpp  PolyDrawableTest.cpp  TimelineTest.cpp  gtest_main.cpp
